@@ -65,12 +65,12 @@ QmuParserBase::QmuParserBase()
     : m_locale(QLocale::c()),
       m_decimalPoint(QLocale::c().decimalPoint()),
       m_thousandsSeparator(QLocale::c().groupSeparator()),
+      m_FunDef(),
       m_pParseFormula(&QmuParserBase::ParseString),
       m_vRPN(),
       m_vStringBuf(),
       m_vStringVarBuf(),
       m_pTokenReader(),
-      m_FunDef(),
       m_PostOprtDef(),
       m_InfixOprtDef(),
       m_OprtDef(),
@@ -101,12 +101,12 @@ QmuParserBase::QmuParserBase(const QmuParserBase &a_Parser)
     : m_locale(a_Parser.getLocale()),
       m_decimalPoint(a_Parser.getDecimalPoint()),
       m_thousandsSeparator(a_Parser.getThousandsSeparator()),
+      m_FunDef(),
       m_pParseFormula(&QmuParserBase::ParseString),
       m_vRPN(),
       m_vStringBuf(),
       m_vStringVarBuf(),
       m_pTokenReader(),
-      m_FunDef(),
       m_PostOprtDef(),
       m_InfixOprtDef(),
       m_OprtDef(),
