@@ -72,6 +72,7 @@
 - [#767] Valentina produces wrong main path.
 - Fix issue. Curves look too wavy.
 - [#773] Tool Point intersection curve and axis cannot find desired intersection point.
+- [#776] Valentina cannot recognize translated functions.
 
 # Version 0.5.0 May 9, 2017
 - [#581] User can now filter input lists by keyword in function wizard.
